# inkblot

./: .gitignore  Cargo.toml  README.md  pyproject.toml
chalk/: __init__.py
examples/: benchmark_vs_matplotlib.py  image_overlays.py  imshow_gaussian.py  imshow_noise.py  light_curve.py  line_and_scatter.py  line_plot.py  multi_line.py  run_all.py  scatter_plot.py  spectrum.py
inkblot/: __init__.py  colors.py  figure.py  scale.py  transform.py
src/: colors.rs  layout.rs  lib.rs  render.rs  text.rs
