[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inkblot"
version = "0.0.1"
description = "Fast, simple plotting for scientists. Rust-powered, no matplotlib required."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["plotting", "visualization", "scientific", "astronomy"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/zgazak/inkblot"
Repository = "https://github.com/zgazak/inkblot"

[tool.hatch.build.targets.wheel]
packages = ["inkblot"]

[dependency-groups]
dev = []
