[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "inkblot"
version = "0.0.1"
description = "Fast, simple plotting for scientists. Rust-powered, no matplotlib required."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["plotting", "visualization", "scientific", "astronomy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/zgazak/inkblot"
Repository = "https://github.com/zgazak/inkblot"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "inkblot._core"
